[project]
name = "PyArtifactory"
version = "2.10.0"
description = "Typed interactions with the Jfrog Artifactory REST API"
authors = [
    { name = "Ananias CARVALHO", email = "carvalhoananias@hotmail.com" },
    { name = "Thomas GAUDIN", email = "thomas.gaudin@centraliens-lille.org" },
    { name = "Helio Chissini de Castro", email = "heliocastro@gmail.com" },
]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"
keywords = ["artifactory"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Typing :: Typed",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests~=2.31",
    "typing_extensions>=4.7.1,<5",
    "pydantic[email]>=2.4.0,<3",
]

[project.urls]
Repository = "https://github.com/anancarv/python-artifactory"
Documentation = "https://github.com/anancarv/python-artifactory"
"Bug Tracker" = "https://github.com/anancarv/python-artifactory/issues"

[dependency-groups]
dev = [
    "ruff>=0.0.289,<0.0.290",
    "pytest>=7.4.2,<8",
    "black>=23.3.0,<24",
    "pre-commit>=2.9.2,<3",
    "responses>=0.23.3,<0.24",
    "pytest-mock>=2.0.0,<3",
    "detect-secrets>=1.2.0,<2",
    "pytest-cov>=4.1.0,<5",
    "mypy>=1.5.1,<2",
    "typed-ast>=1.5.5,<2",
    "types-urllib3>=1.26.25.14,<2",
    "types-requests>=2.31.0.2,<3",
    "pytest-md>=0.2.0,<0.3",
    "pytest-emoji>=0.2.0,<0.3",
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120

[tool.black]
target-version = ["py310"]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
log_cli = true
log_cli_level = "INFO"

[tool.mypy]
files = [
    "pyartifactory"
]
plugins = [
    "pydantic.mypy"
]

follow_imports = "normal"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
no_implicit_reexport = true
disallow_untyped_defs = false
ignore_missing_imports = false
pretty = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff]
fix = true
line-length = 120
ignore = [ "N815", "S101", "UP", "A003" ]
extend-select = [
    "E",   # pycodestyle error
    "W",   # pycodestyle warning
    "F",   # pyflakes
    "A",   # flakes8-builtins
    "COM", # flakes8-commas
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib
    "I",   # isort
    "N",   # pep8 naming
    "S",   # bandit
]

# Exclude a variety of commonly ignored directories.
extend-exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.8
target-version = "py38"

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.isort]
required-imports = ["from __future__ import annotations"]

[tool.bandit]
exclude_dirs = ["tests"]
